--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1675,11 +1675,12 @@ input, select, textarea {
 	font-size: 20px;
 	font-weight: bold;
 	border: 1px solid white;
-	padding: 10px 0;
+	padding: 10px;
 	border-radius: 5px;
 	font-variant: small-caps;
 	text-transform: uppercase;
 	letter-spacing: 5px;
+	margin-bottom: 20px;
 }
 
 .download-resume:hover {
